Added database operations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url= ${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.driver-class-name = org.postgresql.Driver
 
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImproveNamingStrategy
+spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
