--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImproveNamingStrategy
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+server.port=${PORT:9090}
